<resources>
    <string name="app_name">Dino Android Framework Demo</string>
    <string name="user_id">User ID:</string>
    <string name="user_details">User Details</string>
    <string name="display_name">Display Name:</string>
    <string name="token">Token:</string>
    <string name="connect">Connect</string>
    <string name="server_url">Server url:</string>
    <string name="disconnect">Disconnect</string>
    <string name="status">Status:</string>
    <string name="get_channel_list">Get Channel List</string>
    <string name="channel_list">Channel List</string>
    <string name="current_rooms">Current Joinable Rooms:</string>
    <string name="room_name">Room Name:</string>
    <string name="create_room">Create Room</string>
    <string name="send">Send</string>
</resources>
